--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,9 +5,9 @@
         テスト
       .sideheader__contents__icons 
         =link_to "#", class: "sideheader__contents__icon__group" do
-          <i class="fa fa-edit" iii></i>
+          =icon('fas','edit')
         =link_to "#", class: "sideheader__contents__icon__setting" do
-          <i class="fa fa-cog"></i>
+          =icon('fas','cog')
       
 
   .sidecontents
