--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -7,29 +7,31 @@
   width: calc(100vw - 300px);
   border-bottom: 1px solid #eeeeee;
   float: right;
-.chatheader__contents{
-  padding-left: 40px;
-  padding-right: 40px;
-  position: relative;
-}
-.chatheader__contents__groupname{
-  padding-top: 35px;
-  font-size: 20px;
-  color: #333333;
-}
-.chatheader__contents__member{
-  font-size: 12px;
-  color: #999999;
-  padding-top: 15px;
-}
-.chatheader__contents__right{
-  position: absolute;
-  top: 28px;
-  right: 40px;
-  color: skyblue;
-  border: 1px solid;
-  padding: 10px 20px 10px 20px;
-}
+  &__contents{
+    padding-left: 40px;
+    padding-right: 40px;
+    position: relative;
+
+    &__groupname{
+      padding-top: 35px;
+      font-size: 20px;
+      color: #333333;
+    }
+  }
+   
+  &__contents__member{
+    font-size: 12px;
+    color: #999999;
+    padding-top: 15px;
+ }
+  &__contents__right{
+    position: absolute;
+    top: 28px;
+    right: 40px;
+    color: skyblue;
+    border: 1px solid;
+    padding: 10px 20px 10px 20px;
+  }
 }
 
 .chatmessage {
@@ -37,22 +39,22 @@
   width: calc(100vw - 300px);
   float: right;
   background-color: #fafafa;
-  .chatmessage__contents{
+  &__contents{
     padding-left: 40px;
     padding-top: 46px;
     display: flex;
     justify-content: flex-start;
   }
-  .chatmessage__contents__user{
+  &__contents__user{
     font-weight: bold;
     font-size: 16px;
   }
-  .chatmessage__contents__time{
+  &__contents__time{
     font-size: 12px;
     color: #999999;
     margin-left: 10px;
   }
-  .chatmessage__message{
+  &__message{
     font-size: 14px;
     color: #434a54;
     padding-left: 40px;
@@ -67,30 +69,31 @@
   top: 721px;
   right: 0;
   background-color: #ddd;
-  .chatform__contents{
+  &__contents{
     margin-top: 25px;
     margin-left: 40px;
     margin-right: 40px;
     position: relative;
   }
-  .chatform__contents--hidden{
+  &__contents__message--hidden{
     display: none;
   }
-  .chatform__contents__message{
+  &__contents__message{
     height: 50px;
-    width: 941px;
+    width: 88.7%;
     float: left;
   }
-  .chatform__contents__form{
+  &__contents__form{
     color: #eeeeee;
     background-color: #52a9d1;
     height: 50px;
     width: 100px;
+    right: 0;
     margin-left: 15px;
   }
-  .chatform__contents__image{
+  &__contents__message__image{
     position: absolute;
-    right: 125px;
+    right: 11%;
     top: 10px;
     height: 16px;
     margin-right: 10px;
