ユーザー管理機能追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,6 @@
 @import "./font-awesome";
 @import "./side_bar";
 @import "./main_chat";
-
+@import "./user";
+@import "./colors";
+@import "./flash";
