グループ機能実装

--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -49,9 +49,12 @@
   &__groups__name{
     font-size: 15px;
     margin-bottom: 5px;
+    color: #ffffff;
   }
   &__groups__chat{
     font-size: 11px;
+    color: #ffffff;
+    text-decoration: none;
   }
 }
 
