--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -17,4 +17,4 @@
           .sidecontents__groups__name
             = group.name
           .sidecontents__groups__chat
-            メッセージはまだありません。
+            = group.show_last_message
