--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -32,6 +32,9 @@
     border: 1px solid;
     padding: 10px 20px 10px 20px;
   }
+  a{
+    text-decoration: none;
+  }
 }
 
 .chatmessage {
@@ -39,11 +42,13 @@
   width: calc(100vw - 300px);
   float: right;
   background-color: #fafafa;
+  overflow-x: scroll;
   &__contents{
     padding-left: 40px;
     padding-top: 46px;
     display: flex;
     justify-content: flex-start;
+    position: relative;
   }
   &__contents__user{
     font-weight: bold;
@@ -59,6 +64,9 @@
     color: #434a54;
     padding-left: 40px;
     padding-top: 10px;
+    position: absolute;
+    top: 65px;
+    left: 0;
   }
 }
 
