--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -59,15 +59,17 @@
     color: #999999;
     margin-left: 10px;
   }
-  &__message{
-    font-size: 14px;
-    color: #434a54;
-    padding-left: 40px;
-    padding-top: 10px;
-    position: absolute;
-    top: 65px;
-    left: 0;
-  }
+}
+
+.chatmessage__message{
+  font-size: 14px;
+  color: #434a54;
+  // padding-left: 40px;
+  // padding-top: 10px;
+  // position: absolute;
+  // top: 65px;
+  // left: 0;
+  padding-left: 40px;
 }
 
 .chatform{
