--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -85,7 +85,7 @@
   }
   &__contents__message{
     height: 50px;
-    width: 88.7%;
+    width: calc(100% - 120px);
     float: left;
   }
   &__contents__form{
@@ -93,12 +93,12 @@
     background-color: #52a9d1;
     height: 50px;
     width: 100px;
-    right: 0;
+    float: right;
     margin-left: 15px;
   }
   &__contents__message__image{
     position: absolute;
-    right: 11%;
+    left: calc(100% - 170px);
     top: 10px;
     height: 16px;
     margin-right: 10px;
